# Opengl

./: .gitmodules  CMakeLists.txt  README.md
Opengl/: CMakeLists.txt  Opengl.cpp  Opengl.h
Opengl/camera/: main.cpp
Opengl/color/: main.cpp
Opengl/coordinate/: main.cpp
Opengl/glad/: glad.c
Opengl/include/camera/: camera.h
Opengl/include/glad/: glad.h
Opengl/include/image/: image.h
Opengl/include/mesh/: mesh.h
Opengl/include/model/: model.h
Opengl/include/shader/: shader.h
Opengl/light/: light1.cpp  light2.cpp
Opengl/lightcaster/: directional_light.cpp  point_light.cpp  spot_light.cpp
Opengl/lightmap/: main.cpp
Opengl/material/: main.cpp
Opengl/multiplelights/: main.cpp
Opengl/resources/lightcaster/shaders/: directional_light.fs  point_light.fs  spot_light.fs
Opengl/resources/material/shaders/: lighting.fs
Opengl/resources/multiplelights/shaders/: multiple_lights.fs
Opengl/texture/: main.cpp
Opengl/transform/: main.cpp
